8245955: Shenandoah: Remove LRB/is_redundant optimization

Reviewed-by: roland, shade